--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "Greentest",
+  "name": "Douyinhot",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5",
-    "highcharts": "^6.1.1"
+    "@rails/webpacker": "^3.5",
+    "highcharts": "^6.1.1",
+    "node-sass": "^7.0.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "node-sass": "^7.0.1",
+    "webpack-dev-server": "^2.11.2"
   }
 }
